--- a/src/robot_chassis/pavs_bringup/CMakeLists.txt
+++ b/src/robot_chassis/pavs_bringup/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(pav_s01_bringup)
+project(pavs_bringup)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
