--- a/src/robot_chassis/pavs_bringup/CMakeLists.txt
+++ b/src/robot_chassis/pavs_bringup/CMakeLists.txt
@@ -122,7 +122,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-        include/pav_s01_bringup
+        include/pavs_bringup
         ${catkin_INCLUDE_DIRS}
 )
 
