--- a/src/vehicle_mapping/CMakeLists.txt
+++ b/src/vehicle_mapping/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(vehicle_navigation)
+project(vehicle_mapping)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,13 +8,10 @@ project(vehicle_navigation)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-        roscpp
-        rosmsg
-        rospy
-        std_msgs
-        geometry_msgs
-        # world_canvas_msgs
-        )
+  roscpp
+  rospy
+  std_msgs
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -73,7 +70,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#   std_msgs
 # )
 
 ################################################
@@ -106,10 +103,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-        #  INCLUDE_DIRS include
-        #  LIBRARIES yahboomcar_nav
-        #  CATKIN_DEPENDS roscpp rosmsg rospy
-        #  DEPENDS system_lib
+#  INCLUDE_DIRS include
+#  LIBRARIES vehicle_mapping
+#  CATKIN_DEPENDS roscpp rospy std_msgs
+#  DEPENDS system_lib
 )
 
 ###########
@@ -119,13 +116,13 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-        # include
-        ${catkin_INCLUDE_DIRS}
+# include
+  ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/yahboomcar_nav.cpp
+#   src/${PROJECT_NAME}/vehicle_mapping.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -136,7 +133,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/yahboomcar_nav_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/vehicle_mapping_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -152,11 +149,6 @@ include_directories(
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
-
-# add_executable(save src/save_map.cpp)
-# target_link_libraries(save ${catkin_LIBRARIES})
-add_executable(rrt_save_map src/rrt_save_map.cpp)
-target_link_libraries(rrt_save_map ${catkin_LIBRARIES})
 
 #############
 ## Install ##
@@ -205,7 +197,7 @@ target_link_libraries(rrt_save_map ${catkin_LIBRARIES})
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_yahboomcar_nav.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_vehicle_mapping.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
