--- a/src/isspa_chassis/vehicle_bringup/pavs_bringup/cfg/PatrolParam.cfg
+++ b/src/isspa_chassis/vehicle_bringup/pavs_bringup/cfg/PatrolParam.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "yahboomcar_bringup"
+PACKAGE = "pavs_bringup"
 from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
@@ -24,4 +24,4 @@ command_enum = gen.enum([gen.const("LengthTest", int_t, 0, "first data"),
 gen.add("Command", int_t, 0, "A size parameter which is edited via an enum", 3, 0, 5, edit_method=command_enum)
 
 gen.add("Switch", bool_t, 0, "Switch in robot", False)
-exit(gen.generate(PACKAGE, "YahboomCarPatrol", "PatrolParam"))
+exit(gen.generate(PACKAGE, "PAVS_Patrol", "PatrolParam"))
