--- a/src/isspa_chassis/vehicle_bringup/pavs_bringup/CMakeLists.txt
+++ b/src/isspa_chassis/vehicle_bringup/pavs_bringup/CMakeLists.txt
@@ -110,7 +110,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
         #  INCLUDE_DIRS include
-        #  LIBRARIES yahboomcar_bringup
+        #  LIBRARIES pavs_bringup
           CATKIN_DEPENDS roscpp rosmsg rospy dynamic_reconfigure geometry_msgs nav_msgs tf
         #  DEPENDS system_lib
 )
@@ -128,7 +128,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/yahboomcar_bringup.cpp
+#   src/${PROJECT_NAME}/pavs_bringup.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -139,7 +139,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/yahboomcar_bringup_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/pavs_bringup_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -206,7 +206,7 @@ target_link_libraries(base_node ${catkin_LIBRARIES})
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_yahboomcar_bringup.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_pavs_bringup.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
