--- a/src/isspa_chassis/vehicle_bringup/pavs_bringup/cfg/CalibrateLinear.cfg
+++ b/src/isspa_chassis/vehicle_bringup/pavs_bringup/cfg/CalibrateLinear.cfg
@@ -1,6 +1,6 @@
 #! /usr/bin/env python
 
-PACKAGE = "yahboomcar_bringup"
+PACKAGE = "pavs_bringup"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
