--- a/src/isspa_chassis/vehicle_bringup/pavs_bringup/cfg/PIDparam.cfg
+++ b/src/isspa_chassis/vehicle_bringup/pavs_bringup/cfg/PIDparam.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "yahboomcar_bringup"
+PACKAGE = "pavs_bringup"
 from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
