--- a/src/isspa_chassis/vehicle_bringup/pavs_bringup/package.xml
+++ b/src/isspa_chassis/vehicle_bringup/pavs_bringup/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="iscas@todo.todo">yahboom</maintainer>
+  <maintainer email="iscas@todo.todo">iscas</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/yahboomcar_bringup</url> -->
+  <!-- <url type="website">http://wiki.ros.org</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
