--- a/src/isspa_navigation/navigation_stack/CMakeLists.txt
+++ b/src/isspa_navigation/navigation_stack/CMakeLists.txt
@@ -107,7 +107,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
         #  INCLUDE_DIRS include
-        #  LIBRARIES yahboomcar_nav
+        #  LIBRARIES navigation_stack
         #  CATKIN_DEPENDS roscpp rosmsg rospy
         #  DEPENDS system_lib
 )
@@ -125,7 +125,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/yahboomcar_nav.cpp
+#   src/${PROJECT_NAME}/nav.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -136,7 +136,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/yahboomcar_nav_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/nav_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -205,7 +205,7 @@ target_link_libraries(rrt_save_map ${catkin_LIBRARIES})
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_yahboomcar_nav.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_nav.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
