--- a/src/isspa_chassis/vehicle_bringup/pavl_bringup/package.xml
+++ b/src/isspa_chassis/vehicle_bringup/pavl_bringup/package.xml
@@ -52,6 +52,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>isspa</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
